--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gatefi/js-sdk": "^0.12.2",
+    "@privy-io/react-auth": "^1.40.3",
     "crypto-browserify": "^3.12.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
