--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "crypto-browserify": "^3.12.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "ethers": "^6.7.1",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
